# MiSS_starlings

./: .gitignore  README.md  pyproject.toml  requirements.txt  starling_marl_model.ipynb
data/: flock_metrics.csv
data/scale-free corelation in starling flocks/: 1005766107_sd01.rtf
docs/: cp1_problem_analysis.md  stage1.md  stage2.md  stage3.md
py-visualization/: starling_policy.onnx  starling_policy.onnx.data  visualization.py
unity-visualization/Starlings/Assets/: Bird.prefab  StarlingAgent.cs
unity-visualization/Starlings/Assets/Models/: starling_policy.onnx
unity-visualization/Starlings/Assets/Scenes/: SampleScene.unity
unity-visualization/Starlings/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity-visualization/Starlings/Assets/StreamingAssets/: starling_policy.sentis
unity-visualization/Starlings/ProjectSettings/: ProjectSettings.asset
